// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KonnectorUpdateInfos should render 1`] = `
<InfosMigration
  action={
    <KonnectorUpdateLinker
      konnector={
        Object {
          "slug": "test-konnector",
        }
      }
      label="infos.konnectorUpdate.button.label"
    />
  }
  description={
    <React.Fragment>
      <ForwardRef
        className=""
        ellipsis={false}
        tag="div"
      >
        infos.konnectorUpdate.title
      </ForwardRef>
      <ForwardRef
        ellipsis={false}
        tag="div"
      >
        infos.konnectorUpdate.body.regular
      </ForwardRef>
    </React.Fragment>
  }
  theme="secondary"
/>
`;

exports[`KonnectorUpdateInfos should render as blocking 1`] = `
<InfosMigration
  action={
    <KonnectorUpdateLinker
      isBlocking={true}
      konnector={
        Object {
          "slug": "test-konnector",
        }
      }
      label="infos.konnectorUpdate.button.label"
    />
  }
  description={
    <React.Fragment>
      <ForwardRef
        className="u-pomegranate"
        ellipsis={false}
        tag="div"
      >
        infos.konnectorUpdate.title
      </ForwardRef>
      <ForwardRef
        ellipsis={false}
        tag="div"
      >
        infos.konnectorUpdate.body.blocking
      </ForwardRef>
    </React.Fragment>
  }
  theme="danger"
/>
`;
